--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,22 +2,25 @@
 
 #app {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   font-weight: normal;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  height: 100vh;
 }
 
 a,
-.green {
+.swaron {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: rgb(17, 189, 219);
   transition: 0.4s;
   padding: 3px;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: hsla(175, 100%, 37%, 0.2);
   }
 }
 
@@ -25,11 +28,5 @@ a,
   body {
     display: flex;
     place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
   }
 }
